--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="assets/imgs/photo.jpg" alt="Portrait of Your Name" width="600" height="800" loading="lazy" decoding="async" style="width:100%;height:100%;object-fit:cover">
     </div>
     <h2 class="name">Pierriccardo Olivieri</h2>
-    <p class="role">name.surname@polimi.it</p>
+    <p class="role">pierriccardo.olivieri@polimi.it</p>
 
     <!-- Icon hyperlinks -->
     <div class="links" aria-label="Profiles">
@@ -99,6 +99,8 @@
     <section id="news" aria-labelledby="news-h">
       <h2 id="news-h" class="sec-title">News</h2>
       <ul class="news">
+        <li><strong>Nov 2025</strong> — Paper accepted at AAAI with oral presentation </li>
+        <li><strong>Jul 2025</strong> — Paper accepted at Control and Decision Conference (CDC) </li>
         <li><strong>Apr 2025</strong> — Started my visiting period at UT Austin. </li>
         <li><strong>Mar 2025</strong> — Paper accepted for pubblication at CDC25 </li>
         <li><strong>Mar 2025</strong> — Paper accepted for pubblication at RLC25 Workshop </li>
@@ -109,55 +111,67 @@
     <!-- Selected publications -->
     <section id="pubs" aria-labelledby="pubs-h">
       <h2 id="pubs-h" class="sec-title">Selected publications</h2>
+
+      <h3 class="pub-subsection">Conferences</h3>
       <ol class="pubs">
         <li>
-          <strong class="pub-title">Subgame Solving in Adversarial Team Games</strong>
-          <div class="pub-authors">B Zhang, L Carminati, F Cacciamani, G Farina, <em>P Olivieri</em>, N Gatti, T Sandholm</div>
-          <div class="pub-venue">NeurIPS 2022</div>
-          <div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>
-        </li>
-        <li>
-          <strong class="pub-title">Online Markov Decision Processes Configuration with Continuous Decision Space</strong>
-          <div class="pub-authors">D Maran*, <em>P Olivieri*</em>, FE Stradi*, G Urso, N Gatti, M Restelli</div>
-          <div class="pub-venue">AAAI 2024</div>
-          <div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>
+          <strong class="pub-title">Do it for HER: First-order Logic Reward Specification in Reinforcement Learning</strong>
+          <div class="pub-authors"><em>P Olivieri</em>, F Lasca, A Gianola, M Papini</div>
+          <div class="pub-venue">AAAI 2026 (Oral) </div>
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
         </li>
         <li>
           <strong class="pub-title">Precision UAV Formation Control via PGPE-enhanced NMPC</strong>
           <div class="pub-authors"><em>P Olivieri</em>, A Sanchini, R Spica, N Gatti, S Formentin</div>
           <div class="pub-venue">CDC 2025</div>
-          <div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
         </li>
-        <!--<li>
-          <strong class="pub-title">Experimental implementation of discrete time quantum walk with the ibm qiskit library</strong>
-          <div class="pub-authors"><em>P Olivieri</em>, M Askarpour, E Di Nitto</div>
-          <div class="pub-venue">IEEE/ACM QSE Workshop 2021</div>
-          <div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>
+        <li>
+          <strong class="pub-title">Online Markov Decision Processes Configuration with Continuous Decision Space</strong>
+          <div class="pub-authors">D Maran*, <em>P Olivieri*</em>, FE Stradi*, G Urso, N Gatti, M Restelli</div>
+          <div class="pub-venue">AAAI 2024</div>
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
         </li>
+        <li>
+          <strong class="pub-title">Subgame Solving in Adversarial Team Games</strong>
+          <div class="pub-authors">B Zhang, L Carminati, F Cacciamani, G Farina, <em>P Olivieri</em>, N Gatti, T Sandholm</div>
+          <div class="pub-venue">NeurIPS 2022</div>
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
+        </li>
+      </ol>
+
+      <h3 class="pub-subsection">Workshops</h3>
+      <ol class="pubs">
         <li>
           <strong class="pub-title">Online Configuration in Continuous Decision Space</strong>
           <div class="pub-authors">D Maran, <em>P Olivieri</em>, FE Stradi, G Urso, N Gatti, M Restelli</div>
           <div class="pub-venue">EWRL 2023</div>
-          <div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>
-        </li>-->
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
+        </li>
         <li>
           <strong class="pub-title">Do it for HER: First-order Logic Reward Specification in Reinforcement Learning</strong>
           <div class="pub-authors"><em>P Olivieri</em>, F Lasca, A Gianola, M Papini</div>
           <div class="pub-venue">RLC 2025 Workshop on Programmatic Reinforcement Learning</div>
-          <div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
         </li>
         <li>
           <strong class="pub-title">Delayed Adversarial Attacks on Stochastic Multi-Armed Bandits</strong>
           <div class="pub-authors"><em>P Olivieri</em>, M Castiglioni, N Gatti</div>
           <div class="pub-venue">ICML 2024 Workshop Aligning Reinforcement Learning Experimentalists and Theorists</div>
-          <div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
+        </li>
+        <li>
+          <strong class="pub-title">Experimental implementation of discrete time quantum walk with the ibm qiskit library</strong>
+          <div class="pub-authors"><em>P Olivieri</em>, M Askarpour, E Di Nitto</div>
+          <div class="pub-venue">IEEE/ACM QSE Workshop 2021</div>
+          <!--<div class="pub-links"><a href="#">pdf</a> <a href="#">bibtex</a></div>-->
         </li>
       </ol>
       <p><small>Full list on <a href="https://scholar.google.com/">Google Scholar</a>.</small></p>
     </section>
 
     <footer>
-      <small>&copy; 2025 Pierriccardo Olivieri • Personal Website • <a href="https://github.com/pierriccardo/website">Want this template?</a></small>
+      <small>&copy; 2025 Pierriccardo Olivieri • Personal Website • <a href="https://github.com/pierriccardo/pierriccardo.github.io">Want this template?</a></small>
     </footer>
   </main>
 </div>
